--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "infra:up": "docker-compose up -d",
-    "infra:down": "docker-compose down"
+    "infra:down": "docker-compose down",
+    "test": "mocha posting-app/test --timeout 15000 --exit"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -14,5 +15,11 @@
     "mongoose": "^6.0.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.3"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^9.1.1",
+    "supertest": "^6.1.6"
   }
 }
