--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fast-csv": "^4.3.6",
+    "helmet": "^5.1.1",
     "http-status-codes": "^2.1.4",
     "mongoose": "^6.0.1",
     "morgan": "^1.10.0",
